--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -16,6 +16,11 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        submodules: true 
+
+    - name: Initialize Submodules
+      run: git submodule update --init --recursive
 
     - name: Set up Python
       uses: actions/setup-python@v4
