--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -1,4 +1,4 @@
-name: CI Pipeline
+name: Run Tests on Staging Branch
 
 on:
   push:
@@ -16,6 +16,11 @@ jobs:
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
+      with:
+        submodules: true 
+
+    - name: Initialize Submodules
+      run: git submodule update --init --recursive
 
     - name: Set up Python
       uses: actions/setup-python@v4
