--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -9,18 +9,11 @@ jobs:
   test:
     runs-on: ubuntu-latest
 
-    defaults:
-      run:
-        working-directory: AbschlussprojektCloud2023/backend-server
-
     steps:
     - name: Checkout Repository
       uses: actions/checkout@v4
       with:
-        submodules: true 
-
-    - name: Initialize Submodules
-      run: git submodule update --init --recursive
+        submodules: true  # Stellt sicher, dass Submodule auch ausgecheckt werden
 
     - name: Set up Python
       uses: actions/setup-python@v4
@@ -34,7 +27,10 @@ jobs:
 
     - name: Install Dependencies
       run: |
+        cd AbschlussprojektCloud2023/backend-server
         pip install -r requirements.txt
 
     - name: Run tests
-      run: python -m unittest discover -s tests
+      run: |
+        cd AbschlussprojektCloud2023/backend-server
+        python -m unittest discover -s tests
